--- a/secondpage.html
+++ b/secondpage.html
@@ -3,6 +3,6 @@
 <title>My secondPage</title>
 </head>
 <body>
-  Ｍy second page.<a href="home.html">back home</a>
+  GA課程測試建立的第二個網頁！Ｍy second page.<a href="home.html">back home</a>
 </body>
 </html>
