--- a/event.html
+++ b/event.html
@@ -16,7 +16,7 @@ gtag("config", "G-DPG3Y2BLQR");
 <script>
 function trackCTA(){
 	// 送出事件紀錄
-	gtag("event", "點擊", {
+	gtag("event", "來點我呀", {
 		"event_category":"CTA",
 		"event_label":"頁面標題",
 		"value": 1
